# rdma

ib_demo/: RDMA_RC_example.c
pfent/: CMakeLists.txt  README.md  pingpong.cpp  tags
pfent/rdma/: Network.cpp  QueuePair.cpp  RDMAMessageBuffer.cpp  RDMAMessageBuffer.h  api.hpp  log.h
tensorflow/: CMakeLists.txt  README.md  pingpong.cc  tags
tensorflow/rdma/: api.hpp  log.cc  log.h  rdma.h  rdma_adapter.cc  rdma_adapter.h  rdma_buffer.cc  rdma_buffer.h  rdma_channel.cc  rdma_channel.h  rdma_mgr.cc  rdma_mgr.h  tags
tensorflow/tcp/: tcpWrapper.cpp  tcpWrapper.h
